trying to fix bug on iphone

--- a/styles.css
+++ b/styles.css
@@ -54,16 +54,16 @@ p {
   margin: 0;
 }
 
-.temp-cityname-icon {
+.main-info {
   padding-bottom: 20px;
 }
 
-
-
-
-
 #temp {
   font-size: 50px;
+}
+
+#city {
+  margin-bottom: 10px;
 }
 
 #sunrise,
